fix: rewrite block delete to scan raw text, add spacing between stat blocks
The CM6 syntax tree approach didn't work because Obsidian's
registerMarkdownCodeBlockProcessor renders widgets outside the tree.
New approach scans the raw document text for ```monster/spell/item
fences around the cursor position.

Also added 1.5em vertical margin to all stat block wrappers so
blocks don't render back-to-back in reading mode.

--- a/src/styles/archivist-dnd.css
+++ b/src/styles/archivist-dnd.css
@@ -51,7 +51,7 @@
   position: relative;
   width: 100%;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 1.5em auto;
   display: flex;
   justify-content: center;
 }
@@ -351,7 +351,7 @@
 .archivist-spell-block-wrapper {
   position: relative;
   width: 100%;
-  margin: 0;
+  margin: 1.5em 0;
   display: flex;
   justify-content: flex-start;
 }
@@ -583,7 +583,7 @@
 .archivist-item-block-wrapper {
   position: relative;
   width: 100%;
-  margin: 0;
+  margin: 1.5em 0;
   display: flex;
   justify-content: flex-start;
 }
